# browser-history-cli

./: .gitignore  README.md  browser_history.py  claude.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
